# EPIP

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  README_EN.md  pyproject.toml  requirements.txt  技术白皮书.md
.claude/: index.json  settings.local.json
.claude/plan/: neo4j-graph-explorer.md  前端UI开发.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  pr-check.yml  release.yml.disabled
dataset/住院病人统计/: Inpatient Discharges and Deaths in Hospitals and Registered Deaths in Hong Kong by Disease 2012 (SC).csv  Inpatient Discharges and Deaths in Hospitals and Registered Deaths in Hong Kong by Disease 2013 (SC).csv  Inpatient Discharges and Deaths in Hospitals and Registered Deaths in Hong Kong by Disease 2014 (SC).csv  Inpatient Discharges and Deaths in Hospitals and Registered Deaths in Hong Kong by Disease 2015 (SC).csv  (+8 more)
dataset/年度预算/: annualbudget_sc.csv
dataset/食物安全及公众卫生统计数字/: stat_foodSafty_publicHealth.csv
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: api-reference.md  architecture.md  configuration.md  deployment-guide.md  prd.md  test-strategy.md  validation-report.md
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts  vitest.config.ts
scripts/: CLAUDE.md  __init__.py  analyze_relations.py  benchmark_performance.py  evaluate_entities.py  evaluate_kg_quality.py  export_openapi.py  import_data.py  kg_cli.py  preprocess_data.py  query_cli.py  run_benchmark.py  validate_quality.py  verify_lightrag.py
tests/: __init__.py  conftest.py
(+240 files in other folders)
